examples/test/testpolicy3989.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3989
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key6: value15
      key44: value15
      key38: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value14
          key46: value16
      podSelector:
        matchLabels:
          key40: value26
